SERVER-6909 fix case where update can modify document such that query doesn't work anymore